<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="dodawanie">Dodawanie!</string>
    <string name="plus">+</string>
    <string name="podaj_wynik">Podaj wynik!</string>
    <string name="sprawd">Sprawdź</string>
    <string name="plain1" />
    <string name="plain2" />
    <string name="ustawienia">Ustawienia</string>
    <string name="nowa_gra">Nowa Gra</string>
    <string name="statystyka">Statystyka</string>
    <string name="o">O</string>
</resources>
